[gd_scene load_steps=7 format=3 uid="uid://b4tuy1icgvdik"]

[ext_resource type="Script" path="res://Pong/MainPong.gd" id="1_m60hl"]
[ext_resource type="PackedScene" uid="uid://fh16r4hpceu4" path="res://Pong/Ball.tscn" id="2_1ut6x"]
[ext_resource type="AudioStream" uid="uid://bjyg76gl5087c" path="res://sound/Boop.wav" id="3_hagre"]
[ext_resource type="PackedScene" uid="uid://bw108wcyxxb65" path="res://Pong/Bar.tscn" id="4_8hptu"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_rp22d"]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sy6h7"]
size = Vector2(1152, 20)

[node name="MainPong" type="Node2D"]
script = ExtResource("1_m60hl")
ballscene = ExtResource("2_1ut6x")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1160, 64)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -992.0
offset_top = -504.0
offset_right = 928.0
offset_bottom = 576.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.923112)
color = Color(0, 0, 0, 1)

[node name="ScoreLeft" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -323.342
offset_right = -266.0
offset_bottom = -278.342
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Use  W/S"

[node name="ScoreRight" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 320.0
offset_top = -323.342
offset_right = 454.0
offset_bottom = -278.342
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Use ↑ ↓"
horizontal_alignment = 2

[node name="Indicator" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.517
anchor_top = 0.506
anchor_right = 0.517
anchor_bottom = 0.506
offset_left = -72.64
offset_top = -17.8334
offset_right = 73.36
offset_bottom = 5.16656
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "Press any button"
horizontal_alignment = 1

[node name="BallSpawn" type="Marker2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="BallSpawn"]
offset = Vector2(0.35, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="BallSpawn"]
stream = ExtResource("3_hagre")

[node name="Bar" parent="." instance=ExtResource("4_8hptu")]
position = Vector2(-500, 0)

[node name="Bar2" parent="." instance=ExtResource("4_8hptu")]
position = Vector2(500, 0)
playernumber = 2

[node name="StaticBody2D" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_rp22d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -334)
shape = SubResource("RectangleShape2D_sy6h7")

[node name="ColorRect" type="ColorRect" parent="StaticBody2D/CollisionShape2D"]
custom_minimum_size = Vector2(1600, 64)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -800.0
offset_top = -56.0
offset_right = 800.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 334)
shape = SubResource("RectangleShape2D_sy6h7")

[node name="ColorRect2" type="ColorRect" parent="StaticBody2D/CollisionShape2D2"]
custom_minimum_size = Vector2(1600, 64)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -800.0
offset_top = -10.0
offset_right = 800.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 0
